-fixed tessellation pic not scaling by wrapping it in div. -changed media rule for correct display on Ipad and other tablets.

--- a/styles/websiteStyle.css
+++ b/styles/websiteStyle.css
@@ -247,7 +247,6 @@ a {
 #img5 {
   max-height: 600px;
   margin:auto;
-  max-width:none;
   transition: 0.2s;
   cursor: pointer;
 }
@@ -407,7 +406,7 @@ ul {
   line-height: 3rem;
 }
 
-@media (max-width: 780px) {
+@media (max-width: 801px) {
   header, div#main_part {
     min-width: 400px;
     margin-left: 10px;
